# code-2021-11-27-arunprakash

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/pybmi/: __init__.py  bmi.py  bmicategory.py  pybmi.py
tests/: test_bmi.py  test_bmicategory.py  test_pybmi.py
