[tool.poetry]
name = "pybmi"
version = "0.1.0"
description = "Calculate BMI based on height and weight and analyze riskcategory"
authors = ["Arun Prakash J"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
json = "^2.0.9"
pandas = "^1.3.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
